test/negative/duplicate_var.mut
# Negative: declare variable twice in same scope
x: i64 = 10
x: i64 = 20
